<resources>
    <string name="app_name">Daypon</string>
    <string name="terms"><u>이용약관</u></string>
    <string name="register"><u>회원가입하기</u></string>
    <string name="find_id"><u>아이디 찾기</u></string>
    <string name="find_password"><u>비밀번호 찾기</u></string>
    <string name="show_contents"><u>내용보기</u></string>
    <string name="terms0101">서비스 이용 약관(이하 ‘약관’이라 함)은 ‘데이폰’ (이하 ‘회사’라 함)가 제공하는 ‘데이폰(DAYPON)’을 포함한 관련 서비스(이하 ‘서비스’)를 이용함에 있어 ‘회사’와 ‘회원’(제 2조에서 정의합니다)의 권리, 의무, 책임사항 및 ‘회원’의 ‘서비스’ 이용절차에 관한 사항을 규정함을 목적으로 합니다.</string>
    <string name="terms0201">1. 서비스: 구현되는 단말기 (PC, 휴대형단말기 등의 각종 유무선장치를 포함)와 상관없이 ‘회사’에 종속되어 ‘회원’을 대상으로 제공하는 모든 기능을 의미합니다.
1) 데이폰 서비스(데이폰 서비스와 관련한 자세한 내용은 ‘7조’ 참조) ① ‘멤버십’에 가입된 ‘회원’에게 24시간마다 한 번씩, 데이폰 가맹점(음식점 및 술집)에서 한 잔의 ‘무료 음료’를 제공합니다. ② ‘회원’ 및 ‘비회원’에게 데이폰 가맹점의 영업시간/주소/지도 등의 정보를 제공합니다.</string>
    <string name="terms0202">2. 멤버십: 데이폰 멤버십은 해지될 때까지 월 단위로 지속됩니다. ‘서비스’를 이용하려면 반드시 인터넷에 접속된 상태이면서 지원 디바이스가 있어야 하고, 현재 사용 가능한 결제 수단(‘결제 수단’)을 등록해야 합니다. 이때 등록 결제 수단은 회원이 필요에 따라 수시로 변경할 수 있습니다. 월 멤버십 결제 날짜 전까지 멤버십을 해지하지 않는 한, 다음 달 요금이 회원의 결제 수단을 통해 청구됩니다(요금과 관련한 자세한 내용은 ‘8조’ 참조).</string>
    <string name="terms0203">3. 회원 : ‘서비스’ 통합회원으로 본 약관에 동의하여 이용계약을 체결하고 서비스를 이용하는 모든 회원을 의미합니다.</string>
    <string name="terms0204">4. 비회원 : ‘회원’에 가입하지 않고 ‘회사’가 제공하는 ‘서비스’를 이용하는 자를 의미합니다.</string>
    <string name="terms0205">5. 어플리케이션 : 스마트폰 및 태블릿에서 ‘서비스’를 설치하여 이용할 수 있도록 구성된 프로그램을 의미합니다.</string>
    <string name="terms0206">6. 개인정보 : 정보통신망 이용촉진 및 정보보호 등에 관한 법률에서 언급하는 개인정보(휴대폰번호, 이메일주소)를 말합니다. 본 약관에서 사용하는 용어 중 본 조에서 정하지 아니한 사항은 관계법령에서 정하는 바에 따르며, 그 외에는 일반 관례에 따릅니다.</string>
    <string name="terms0301">1. 이 약관은 회사에서 제공하는 ‘서비스’를 이용하고자 하는 모든 이용자에 대하여 그 효력을 발생합니다.</string>
    <string name="terms0302">2. ‘회사’는 이 약관의 내용을 ‘회원’이 쉽게 알 수 있도록 ‘회사’의 웹사이트 화면 하단에 상설메뉴로 게시합니다.</string>
    <string name="terms0303">3. ‘회사’는 대한민국의 법령과 국제조약을 위배하지 않는 범위에서 이 약관을 개정할 수 있습니다.</string>
    <string name="terms0304">4. ‘회사’가 약관을 개정할 경우에는 적용 예정일 및 개정사유를 명시하여 현행 약관과 함께 적용 예정일 7일 전부터 공지합니다. 다만, ‘회원’에게 불리하게 약관내용을 변경하는 경우에는 최소한 30일 이상의 사전 유예기간을 두고 공지하는 것 외에 전자우편발송 등 전자적 수단을 통해 별도로 통지합니다.</string>
    <string name="terms0305">5. ‘회원’은 개정된 약관에 대해 동의하지 않을 권리가 있으며, 개정된 약관에 동의하지 않을 경우 이용계약을 해지할 수 있습니다. ‘회사’가 전항 단서에 따라 회원에게 통지하면서 상당한 기간(예:30일)을 정하여 거부의사를 표시하지 아니하면 승인한 것으로 본다는 뜻을 명확하게 고지하였음에도 ‘회원’의 의사표시가 없는 경우에는 변경된 약관을 승인한 것으로 봅니다.</string>
    <string name="terms0401">1. ‘회사’는 ‘서비스’에 관하여 적용될 사항(‘개별약관’) 및 세부적인 내용(이하’이용정책’)을 정하여 운영할 수 있으며 해당 내용은 ‘회사’ 홈페이지 및 개별 서비스를 통해 공지합니다.</string>
    <string name="terms0402">2. 개별 서비스에 대한 ‘개별약관’이 본 약관과 상충할 경우에는 ‘개별약관’이 우선하여 적용됩니다.</string>
    <string name="terms0403">3. ‘회원’은 항상 ‘개별약관’이나 ‘이용정책’의 내용에 변경이 있는지를 주시하여야 하며, 변경사항의 공지가 있을 시에는 이를 확인하여야 합니다.</string>
    <string name="terms0501">1. 이용계약은 회원이 되고자 하는 자(이하 ‘가입신청자’)가 약관의 내용에 대하여 동의를 한 다음 ‘서비스’이용 신청을 하고, 회사가 이러한 신청에 대하여 승낙함으로써 체결됩니다.</string>
    <string name="terms0502">2. 회사는 ‘가입신청자’의 신청에 대하여 ‘서비스’이용을 승낙함을 원칙으로 합니다. 다만, 회사는 다음 각 호에 해당하는 신청에 대하여는 승낙을 하지 않거나 사후에 이용계약을 해지할 수 있습니다.</string>
    <string name="terms050201">①가입신청자가 이 약관에 의하여 이전에 회원자격을 상실한 적이 있는 경우 (단 ‘회사’의 회원 재가입 승낙을 얻은 경우에는 예외로 함).</string>
    <string name="terms050202">②허위의 정보를 기재한 경우.</string>
    <string name="terms050203">③회사가 제시하는 내용을 기재하지 않은 경우.</string>
    <string name="terms050204">④부정한 용도로 서비스를 사용하고자 하는 경우.</string>
    <string name="terms050205">⑤ ‘회사’로부터 이용정지 및 제한을 당한 회원이 그 이용정지 기간 중에 이용계약을 임의 해지하고 재 신청을 하는 경우.</string>
    <string name="terms050206">⑥ ‘가입신청자’의 귀책사유로 인하여 승인이 불가능하거나 기타 회사가 정한 제반 사항을 위반하여 신청하는 경우.</string>
    <string name="terms050207">⑦ ‘회사’의 정책에 적합하지 않는 ‘회원’으로 판단되는 경우나 ‘서비스’ 제공이 곤란한 경우.</string>
    <string name="terms050208">⑧ ‘회원’의 이용 목적이나 ‘서비스’ 이용 방법이 ‘회사’의 재산권이나 영업권을 침해하거나 침해할 우려가 있는 경우.</string>
    <string name="terms050209">⑨ 사회의 안녕, 질서 또는 미풍양속을 저해할 목적으로 신청한 경우.</string>
    <string name="terms050210">⑩ 회사의 내부서비스 기준에 적합하지 않은 회원으로 판단되는 경우나 서비스 제공이 곤란한 경우.</string>
    <string name="terms050211">⑪ 기타 ‘회사’가 합리적인 판단에 의하여 필요하다고 인정하는 경우.</string>
    <string name="terms0503">3. 제 1 항에 따른 신청에 있어 ‘회사’는 필요할 경우 전문기관을 통한 실명확인 및 본인인증을 요청할 수 있습니다.</string>
    <string name="terms0504">4. 제 1 항에 따른 신청에 있어 ‘회사’는 제공하는 ‘서비스’의 종류에 따라 필요한 경우 ‘가입신청자’에게 추가 정보를 요청할 수 있습니다.</string>
    <string name="terms0505">5. 회사는 ‘서비스’ 관련 설비의 여유가 없거나, 기술상 또는 업무상 문제가 있는 경우에는 승낙을 유보할 수 있습니다.</string>
    <string name="terms0506">6. 본 조 제 2 항과 제 4 항에 따라 회원가입신청의 승낙을 하지 아니하거나 유보한 경우, 회사는 원칙적으로 이를 가입신청자에게 알리도록 합니다.</string>
    <string name="terms0507">7. 이용계약의 성립 시기는 회사가 가입완료를 신청절차 상에서 표시하거나 ‘회사’가 정하는 방법으로 ‘회사’가 ‘가입신청자’에게 가입완료 안내를 발송하여 도달한 시점으로 합니다.</string>
    <string name="terms0601">1. ‘회원’은 언제든지 ‘회사’가 정한 절차에 따라 회원 탈퇴를 요청하여 이용계약 해지 신청을 할 수 있으며, ‘회사’는 관련법 등이 정하는 바에 따라 이를 즉시 처리합니다.</string>
    <string name="terms0602">2. ‘회원’이 계약을 해지할 경우, 회원정보는 관련법 및 개인정보취급방침에 따라 처리됩니다.</string>
    <string name="terms0603">3. 회사는 아래 각 호의 사유가 발생하는 경우 회원의 ‘서비스’ 이용을 중단하거나 경고, 일시 정지, 영구 이용정지 등으로 ‘서비스’이용을 단계적으로 제한할 수 있습니다.</string>
    <string name="terms060301">① 부정하게 타인의 계정을 사용하여 ‘서비스’를 이용한 경우.</string>
    <string name="terms060302">② ‘회원’이 ‘회사’ 서비스의 운영을 고의 및 과실로 방해하는 경우.</string>
    <string name="terms060303">③ 제6조 제2항에 따른 승낙거부 사유가 있음이 확인된 경우.</string>
    <string name="terms060304">④ 타인의 ’서비스’ 이용을 방해하거나 정보를 도용하는 등 전자상거래질서를 위협하는 경우.</string>
    <string name="terms060305">⑤ ‘회사’를 이용하여 법령과 이 약관이 금지하거나 공공질서, 미풍양속에 반하는 행위를 하는 경우.</string>
    <string name="terms060306">⑥ 기타 ‘회사’가 ‘회원’의 이용정지를 진행할 합리적인 사유가 있는 경우.</string>
    <string name="terms0604">4. ‘회사’는 위의 따른 귀책사유로 ‘회원’의 ‘서비스’ 이용을 중단 및 제한하는 경우 이메일, 전화 또는 기타의 방법을 통하여 해지의사를 통지하며, ‘회사’는 이용제한내용에 해당하는 ‘회원’이 다시 이용신청을 하는 경우 30일 동안 승낙을 제한하거나 이용신청을 거절할 수 있습니다.</string>
    <string name="terms0605">5. 이용계약의 종료와 관련하여 발생한 손해는 이용계약이 종료된 해당 회원이 책임을 부담하며, ‘회사’는 일체의 책임을 부담하지 않습니다.</string>
    <string name="terms0606">6. ‘회사’는 ‘회원’이 계속해서 6개월 이상 로그인하지 않는 경우, 회원정보의 보호 및 운영의 효율성을 위해 이용을 정지할 수 있습니다.</string>
    <string name="terms0607">7. ‘회원’은 본 조에 따른 이용제한 등에 대해 ‘회사’가 정한 절차에 따라 이의신청을 할 수 있으며, 이의가 정당하다고 ‘회사’가 인정하는 경우 ‘회사’는 즉시 ‘서비스’의 이용을 재개합니다.</string>
    <string name="terms0701">1. 회사가 본 약관에 따라 ‘회원’에게 제공하는 ‘서비스’와 ‘서비스 이용조건’은 아래와 같습니다.</string>
    <string name="terms070101">1) 데이폰 서비스</string>
    <string name="terms07010101">① ‘멤버십’에 가입된 ‘회원’에게 24시간마다 한 번씩, 데이폰 가맹점(음식점 및 술집)에서 한 잔의 ‘무료 음료’를 제공합니다.</string>
    <string name="terms07010102">② ‘회원’ 및 ‘비회원’에게 데이폰 가맹점의 영업시간/주소/지도 등의 정보를 제공합니다.</string>
    <string name="terms070102">2) 데이폰 서비스 이용조건</string>
    <string name="terms07010201">① ‘멤버십’에 가입된 ‘회원’이 제공받는 무료 음료는 요일, 테이블 당 최대 개수 등 홈페이지에서 예외적으로 명시한 바에 따라 제한될 수 있습니다.</string>
    <string name="terms07010202">② ‘무료 음료’는 ‘회사’와 데이폰 가맹점이 사전에 공시한 음료의 종류에 한하여 제공합니다.</string>
    <string name="private_policy01">1. 개인정보의 처리 목적 "회사"는 개인정보를 다음의 목적을 위해 처리합니다. 처리한 개인정보는 다음의 목적 이외의 용도로는 사용되지 않으며 이용 목적이 변경될 시에는 사전동의를 구할 예정입니다. ① 홈페이지 회원가입 및 관리 회원 가입의사 확인, 서비스 부정이용 방지, 각종 고지·통지, 고충처리, 분쟁 조정을 위한 기록 보존 등을 목적으로 개인정보를 처리합니다. ② 민원사무 처리 민원인의 신원 확인, 민원사항 확인, 사실조사를 위한 연락·통지, 처리결과 통보 등을 목적으로 개인정보를 처리합니다. ③ 재화 또는 서비스 제공 서비스 제공, 콘텐츠 제공, 맞춤 서비스 제공 등을 목적으로 개인정보를 처리합니다. ④ 마케팅 및 광고에의 활용 신규 서비스(제품) 개발 및 맞춤 서비스 제공, 이벤트 및 광고성 정보 제공 및 참여기회 제공, 인구통계학적 특성에 따른 서비스 제공 및 광고 게재, 서비스의 유효성 확인, 접속빈도 파악 또는 회원의 서비스 이용에 대한 통계 등을 목적으로 개인정보를 처리합니다.</string>
    <string name="private_policy02">2. 개인정보 보유 항목 ① 필수항목: 로그인 아이디, 비밀번호, 성별, 생년월일, 휴대전화번호 ② 사용자 입력시 선택 가능한 수집항목: 선호지역정보 ③ 자동수집항목: 서비스 이용 기록, 결제 기록, 접속 로그, 쿠키, 접속 IP 정보 ④ 수집방법 : 홈페이지, 모바일 애플리케이션, 생성정보 수집 툴을 통한 수집</string>
    <string name="private_policy03">3. 개인정보의 처리 및 보유 기간 ① "회사"는 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집 시에 동의 받은 개인정보 보유, 이용기간 내에서 개인정보를 처리, 보유합니다. ② 개인정보 처리 및 보유 기간은 다음과 같습니다. - 이용자의 불만 또는 분쟁처리에 관한 기록 : 3년 - 계약 또는 청약철회 등에 관한 기록 : 5년 - 표시/광고에 관한 기록 : 6개월 - 기타 기록: 회원 탈퇴 후 1년까지 보존</string>
    <string name="private_policy04">4. 개인정보의 제3자 제공에 관한 사항 "회사"는 정보주체의 동의, 법률의 특별한 규정 등 개인정보 보호법 제17조 및 제18조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다. ① 정보주체로부터 별도의 동의를 받은 경우 ② 법률에 특별한 규정이 있거나 법령상 의무를 준수하기 위하여 불가피한 경우 ③ 정보주체 또는 그 법정대리인이 의사표시를 할 수 없는 상태에 있거나 주소불명 등으로 사전 동의를 받을 수 없는 경우로서 명백히 정보주체 또는 제3자의 급박한 생명, 신체, 재산의 이익을 위하여 필요하다고 인정되는 경우 ④ 통계작성 및 학술연구 등의 목적을 위하여 필요한 경우로서 특정 개인을 알아볼 수 없는 형태로 개인정보를 제공하는 경우</string>
    <string name="private_policy05">5. 개인정보처리 위탁 ① "회사"는 추후 원활한 개인정보 업무처리를 위하여 개인정보 처리업무를 위탁할 수 있습니다. ② "회사"는 위탁계약 체결시 개인정보 보호법 제25조에 따라 위탁업무 수행목적 외 개인정보 처리금지, 기술적․관리적 보호조치, 재위탁 제한, 수탁자에 대한 관리․감독, 손해배상 등 책임에 관한 사항을 계약서 등 문서에 명시하고, 수탁자가 개인정보를 안전하게 처리하는지를 감독하고 있습니다. ③ 위탁업무의 내용이나 수탁자가 변경될 경우에는 지체 없이 본 개인정보 처리방침을 통하여 공개하도록 하겠습니다.</string>
    <string name="private_policy06">6. 정보주체의 권리, 의무 및 그 행사방법 이용자는 개인정보주체로서 다음과 같은 권리를 행사할 수 있습니다. ① 정보주체는 "회사"에 대해 언제든지 다음 각 호의 개인정보 보호 관련 권리를 행사할 수 있습니다. (1) 개인정보 열람요구 (2) 오류 등이 있을 경우 정정 요구 (3) 삭제요구 (4) 처리정지 요구 (5) 서비스 탈퇴 요구 ② 제1항에 따른 권리 행사는 웹사이트 내 마이페이지 메뉴에서 혹은 "회사"에 대해 개인정보 보호법 시행규칙 별지 제8호 서식에 따라 서면, 전자우편 등을 통하여 하실 수 있으며 "회사"은 이에 대해 지체 없이 조치하겠습니다. ③ 정보주체가 개인정보의 오류 등에 대한 정정 또는 삭제를 요구한 경우에는 "회사"는 정정 또는 삭제를 완료할 때까지 당해 개인정보를 이용하거나 제공하지 않습니다. ④ 제1항에 따른 권리 행사는 정보주체의 법정대리인이나 위임을 받은 자 등 대리인을 통하여 하실 수 있습니다. 이 경우 개인정보 보호법 시행규칙 별지 제11호 서식에 따른 위임장을 제출하셔야 합니다.</string>
    <string name="private_policy07">7. 처리하는 개인정보의 항목 작성 "회사"는 다음의 개인정보 항목을 처리하고 있습니다. ① [홈페이지 회원가입 및 관리] - 필수항목 : 아이디(이메일 주소), 비밀번호, 휴대전화번호, 생년월일, 성별 ② [민원사무 처리] - 필수항목 : 아이디  - 선택항목 : 휴대전화번호, 이메일 ③ [재화 또는 서비스 제공] - 필수항목 : 아이디 - 선택항목 : 휴대전화번호, 유관결제기록</string>
    <string name="private_policy08">8. 개인정보의 파기 "회사"는 원칙적으로 개인정보 처리목적이 달성된 경우에는 지체없이 해당 개인정보를 파기합니다. 파기의 절차, 기한 및 방법은 다음과 같습니다. ① 파기절차: 이용자가 입력한 정보는 목적 달성 후 별도의 DB에 옮겨져(종이의 경우 별도의 서류) 내부 방침 및 기타 관련 법령에 따라 일정기간 저장된 후 혹은 즉시 파기됩니다. 이 때, DB로 옮겨진 개인정보는 법률에 의한 경우가 아니고서는 다른 목적으로 이용되지 않습니다. ② 파기기한: 이용자의 개인정보는 개인정보의 보유기간이 경과된 경우에는 보유기간의 종료일로부터 5일 이내에, 개인정보의 처리 목적 달성, 해당 서비스의 폐지, 사업의 종료 등 그 개인정보가 불필요하게 되었을 때에는 개인정보의 처리가 불필요한 것으로 인정되는 날로부터 5일 이내에 그 개인정보를 파기합니다. ③ 파기방법: 전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다.</string>
    <string name="private_policy09">9. 개인정보의 안전성 확보 조치 "회사"는 개인정보보호법 제29조에 따라 다음과 같이 안전성 확보에 필요한 기술적/관리적 및 물리적 조치를 하고 있습니다. ① 자체 감사 실시 개인정보 취급 관련 안정성 확보를 위해 정기적으로(분기 1회) 자체 감사를 실시하고 있습니다. ② 개인정보 취급 직원의 최소화 및 교육 개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화 하여 개인정보를 관리하는 대책을 시행하고 있습니다. ③ 내부관리계획의 수립 및 시행 개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다. ④ 해킹 등에 대비한 기술적 대책 "회사"는 해킹이나 컴퓨터 바이러스 등에 의한 개인정보 유출 및 훼손을 막기 위하여 보안프로그램을 설치하고 주기적인 갱신·점검을 하며 외부로부터 접근이 통제된 구역에 시스템을 설치하고 기술적/물리적으로 감시 및 차단하고 있습니다. ⑤ 개인정보의 암호화 이용자의 개인정보는 비밀번호는 암호화 되어 저장 및 관리되고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송 데이터를 암호화 하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 사용하고 있습니다. ⑥ 접속기록의 보관 및 위변조 방지 개인정보처리시스템에 접속한 기록을 최소 6개월 이상 보관, 관리하고 있으며, 접속 기록이 위변조 및 도난, 분실되지 않도록 보안기능 사용하고 있습니다. ⑦ 개인정보에 대한 접근 제한 개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여, 변경, 말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.</string>
    <string name="private_policy10">10. 개인정보 보호책임자 및 열람청구 담당자의 연락처 ① "회사"는 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다. ▶ 개인정보 보호책임자 및 열람청구 담당자 성명: 노재석 연락처: 010-5024-9608, jaeseok@daypon.kr ② 정보주체께서는 "회사"의 서비스를 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. "회사"는 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다. ③ 정보주체는 개인정보 보호법 제35조에 따른 개인정보의 열람 청구를 위의 연락처를 통해 할 수 있습니다. "회사"는 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다.</string>
    <string name="private_policy11">11. 개인정보 유관기관 아래의 기관은 "회사"와는 별개의 기관으로서, "회사"의 자체적인 개인정보 불만처리, 피해구제 결과에 만족하지 못하시거나 보다 자세한 도움이 필요하시면 문의하여 주시기 바랍니다. ▶ 개인정보 침해신고센터 (한국인터넷진흥원 운영) - 소관업무: 개인정보 침해사실 신고, 상담 신청 - 홈페이지: privacy.kisa.or.kr - 전화: (국번 없이) 118 - 주소: 서울시 송파구 중대로 135 한국인터넷진흥원 개인정보침해신고센터 (우)05717 ▶ 개인정보 분쟁조정위원회 (한국인터넷진흥원 운영) - 소관업무: 개인정보 분쟁조정신청, 집단분쟁조정 (민사적 해결) - 홈페이지: privacy.kisa.or.kr - 전화: (국번 없이) 118 - 주소: 서울시 송파구 중대로 135 한국인터넷진흥원 개인정보침해신고센터 (우)05717 ▶ 대검찰청 사이버범죄수사단: 02-3480-3573 (www.spo.go.kr) ▶ 경찰청 사이버범죄수사단: 1566-0112 (www.netan.go.kr)</string>
    <string name="private_policy12">12. 개인정보 처리방침 변경 본 개인정보처리방침은 시행일로부터 적용되며, 법령 및 방침에 따른 변경내용의 추가, 삭제 및 정정이 있는 경우에는 변경사항의 시행 7일 전부터 공지사항을 통하여 고지할 것입니다.</string>
</resources>